# SoulCoreKit

./: .clang-format  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml  ci.yml
benchmarks/: benchmark_cache.cpp  benchmark_connection_pool.cpp  benchmark_thread_pool.cpp
cmake/: SoulCoreKitConfig.cmake.in
docs/: 00_vision.md  01_architecture.md  02_design_principles.md  03_module_specification.md  04_ui_specification.md  05_coding_style.md  06_api_design.md  07_threading.md  08_error_handling.md  09_memory_management.md  10_build_system.md  11_testing.md  12_versioning.md  13_contributing.md  14_roadmap.md  SCNetwork_Integration_Report.md  SoulCoreKit_Framework_Introduction.md
docs/specs/scnetwork-integration/: checklist.md  spec.md  tasks.md
docs_chinese/: 00_vision.md  01_architecture.md  02_design_principles.md  03_module_specification.md  04_ui_specification.md  05_coding_style.md  06_api_design.md  07_threading.md  08_error_handling.md  10_build_system.md  11_testing.md  12_versioning.md  13_contributing.md  14_roadmap.md
docx/: SoulCore-PRD.md  SoulCoreKit UI-PRD.md  SoulCoreKit-V1.3.0-PRD.md  最高原则.md
examples/: CMakeLists.txt  full_stack_example.cpp  logger_example.cpp  main.cpp  network_example.cpp  simple_test.cpp
include/soul/: soul_export.h  soul_mq.h  soul_orm.h
include/soul/async/: async_runner.h  cancelable_task.h  dispatcher.h  future.h  promise.h  task.h  task_runner.h  thread_pool.h
include/soul/auth/: auth_manager.h  permission.h  permissions.h  token.h  token_manager.h  user.h
include/soul/base/: base_dialog.h  base_manager.h  base_object.h  base_repository.h  base_service.h  base_view_model.h  base_widget.h
include/soul/configuration/: config.h  config_schema.h  iconfiguration.h  ini_configuration.h  json_configuration.h
include/soul/core/: application.h  environment.h  error.h  factory.h  interface.h  module.h  platform.h  result.h  singleton.h  time.h  uuid.h  version.h
include/soul/data/: connection_pool.h  database_driver.h  memory_repository.h  repository.h  transaction.h
include/soul/di/: container.h  di_global.h  module.h
include/soul/event/: event_bus.h  event_priority.h  i_event.h  i_message_bus.h  qt_signal_adapter.h  subscription.h  typed_event_bus.h
include/soul/logging/: callback_sink.h  composite_sink.h  console_sink.h  daily_file_sink.h  file_sink.h  i_sink.h  log_formatter.h  log_level.h  log_macros.h  log_record.h  logger.h
include/soul/mq/: imq_connection.h  imq_consumer.h  imq_producer.h  module.h  mq_factory.h
include/soul/network/: cookie_jar.h  downloader.h  http_api.h  http_client.h  http_request.h  http_response.h  i_interceptor.h  network_error.h  network_global.h  retry_policy.h  session.h  soul_network.h  tcp_client.h  uploader.h  web_socket.h
include/soul/orm/: base_repository.h  entities.h  entity.h  module.h  query_wrapper.h  sql_dialect.h  sqlite_repository.h
include/soul/plugin/: iplugin.h  module.h  plugin_global.h  plugin_manager.h
include/soul/storage/: cache.h  file_storage.h  i_serializer.h  istorage.h  json_serializer.h  memory_storage.h  repository.h  settings.h  sqlite_database.h
include/soul/ui/: animation.h  avatar.h  badge.h  base_dialog.h  base_view.h  base_view_model.h  base_widget.h  button.h  card.h  checkbox.h  design_constants.h  dialog.h  dropdown.h  empty_widget.h  glass_effect_cache.h  glass_widget.h  i_glass_effect.h  i_view.h  icon.h  icon_manager.h  input.h  loading.h  navigation.h  page.h  progress.h  scroll_bar.h  sidebar.h  sidebar_hover_filter.h  slider.h  soul_ui.h  spinner.h  style.h  switch.h  tab_bar.h  theme.h  toast.h  tool_tip.h  window.h
src/soul/async/: async_runner.cpp  cancelable_task.cpp  dispatcher.cpp  task.cpp  task_runner.cpp  thread_pool.cpp
src/soul/auth/: auth_manager.cpp  permission.cpp  token_manager.cpp
src/soul/base/: base_dialog.cpp  base_manager.cpp  base_object.cpp  base_repository.cpp  base_service.cpp  base_view_model.cpp  base_widget.cpp
src/soul/configuration/: config.cpp  config_schema.cpp  ini_configuration.cpp  json_configuration.cpp
src/soul/core/: application.cpp  environment.cpp  platform.cpp  time.cpp  uuid.cpp  version.cpp
src/soul/di/: module.cpp
src/soul/event/: event_bus.cpp  qt_signal_adapter.cpp  subscription.cpp
src/soul/logging/: callback_sink.cpp  composite_sink.cpp  console_sink.cpp  daily_file_sink.cpp  file_sink.cpp  log_formatter.cpp  logger.cpp
src/soul/mq/: module.cpp  mq_factory.cpp
src/soul/network/: CMakeLists.txt  cookie_jar.cpp  downloader.cpp  http_client.cpp  http_request.cpp  http_response.cpp  network_error.cpp  session.cpp  tcp_client.cpp  uploader.cpp  web_socket.cpp
src/soul/network/bluetooth/: bluetooth_client_adapter.cpp
src/soul/network/codec/: codec_factory.cpp  json_codec.cpp
src/soul/network/core/: network_adapter_base.cpp
src/soul/network/factory/: network_factory.cpp
src/soul/network/http/: http_client_adapter.cpp
src/soul/network/interceptor/: auth_interceptor.cpp  logging_interceptor.cpp
src/soul/network/monitor/: metrics.cpp  monitor.cpp
src/soul/network/mqtt/: mqtt_client_adapter.cpp
src/soul/network/namedpipe/: named_pipe_adapter.cpp
src/soul/network/policy/: heartbeat_policy.cpp  reconnect_policy.cpp  retry_policy.cpp  timeout_policy.cpp
src/soul/network/pool/: connection_pool.cpp
src/soul/network/serial/: serial_port_adapter.cpp
src/soul/network/tcp/: tcp_client_adapter.cpp
src/soul/network/websocket/: ws_client_adapter.cpp
src/soul/orm/: module.cpp  query_wrapper.cpp
src/soul/plugin/: module.cpp  plugin_manager.cpp
src/soul/storage/: cache.cpp  file_storage.cpp  json_serializer.cpp  memory_storage.cpp  settings.cpp  sqlite_database.cpp
tests/: CMakeLists.txt  test_async.cpp  test_auth.cpp  test_base.cpp  test_cache.cpp  test_configuration.cpp  test_core.cpp  test_di.cpp  test_event_bus.cpp  test_http_request.cpp  test_logger.cpp  test_network.cpp  test_plugin.cpp  test_result.cpp  test_storage.cpp  test_typed_event_bus.cpp  test_utils.cpp
(+88 files in other folders)
